[package]
name = "SwampReconstructed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
tokio = "1.43.0"
mio = "1.0.3"
tokio-tungstenite = "0.26.1"
hyper = "1.5.2"
winapi = "0.3.9"
lazy_static = "1.5"
log = "0.4.22"